fix for some spacing issues

--- a/src/css/themes/_themes.custom.scss
+++ b/src/css/themes/_themes.custom.scss
@@ -568,5 +568,5 @@ header li a {
 }
 
 .marg-top {
-  margin-top: 50px;
+  margin-top: 51px;
 }
